# Metagenomix-Android

./: LICENSE
app/: build.gradle
app/src/androidTest/java/com/metagenomix/android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: environment_sample.txt  graph_map_output_example.txt  minimap_output.txt
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/graphmap/: main.cc  program_parameters.cc
app/src/main/cpp/graphmap/alignment/: alignment.cc  alignment.h  alignment_wrappers.cc  alignment_wrappers.h  anchored.cc  cigargen.cc  cigargen.h  semiglobal.cc
app/src/main/cpp/graphmap/argparser/: argparser.cc  argparser.h
app/src/main/cpp/graphmap/containers/: mapping_data.cc  mapping_data.h  path_graph_entry.cc  path_graph_entry.h  raw_alignment.h  region.cc  region.h  results.h  score_registry.cc  score_registry.h  vertices.h
app/src/main/cpp/graphmap/graphmap/: core_graphmap.cc  filter_anchors.cc  filter_anchors.h  graphmap.cc  graphmap.h  lcs_anchored.cc  lcs_semiglobal.cc  process_read.cc  region_selection.cc
app/src/main/cpp/graphmap/index/: index.cc  index.h  index_hash.h  index_owler.cc  index_owler.h  index_sa.cc  index_sa.h  index_spaced_hash.cc  index_spaced_hash.h  index_spaced_hash_fast.cc  index_spaced_hash_fast.h
app/src/main/cpp/graphmap/libs/seqan-2.0.1/seqan/: align.h
app/src/main/cpp/graphmap/libs/seqan-2.0.1/seqan/misc/: priority_type_heap.h
app/src/main/cpp/graphmap/log_system/: log_system.cc
app/src/main/cpp/graphmap/owler/: dpfilter.h  owler.cc  owler.h  owler_data.h  owler_experimental.cc  process_read.cc
app/src/main/cpp/graphmap/seqan/: math.h  platform.h  system.h
app/src/main/cpp/graphmap/seqan/misc/: bit_twiddling.h
app/src/main/cpp/graphmap/seqan/random/: ext_MersenneTwister.h
app/src/main/cpp/graphmap/sequences/: sequence_file.cc  sequence_file.h  single_sequence.cc  single_sequence.h
app/src/main/cpp/graphmap/utility/: evalue.cc  evalue.h  utility_general.cc
app/src/main/cpp/libs/opal/: opal.cpp
app/src/main/cpp/minimap/: asset_to_file.h  bseq.c  bseq.h  index.c  kdq.h  khash.h  kseq.h  ksort.h  kthread.c  kvec.h  main.c  map.c  minimap.h  misc.c  sdust.c  sdust.h  sketch.c
app/src/main/java/com/metagenomix/android/: MetagenomixApplication.java
app/src/main/java/com/metagenomix/android/activities/: ConversionActivity.java  DatabaseManager.java  Graph.java  GraphActivity.java  History.java  HistoryActivity.java  HomeActivity.java  LoadData.java  LoadDataActivity.java  MainActivity.java  Pathoscope.java  Record.java  RecursiveFileObserver.java  ResultsActivity.java
app/src/main/java/com/metagenomix/android/generator/: GenerateSequenceRunnable.java  Generator.java
app/src/main/java/com/metagenomix/android/model/: DNASegment.java  DNASequence.java  Record.java
app/src/main/java/com/metagenomix/android/processing/: BbMapWrapper.java  MinimapProcessing.java  Pathoscope.java  QueueFeeder.java  SequenceConverter.java
app/src/main/java/com/metagenomix/android/util/: DatabaseManager.java  MetagenomixUtil.java  RecursiveFileObserver.java
app/src/main/res/layout/: activity_graph.xml  activity_history.xml  activity_home.xml  activity_load_data.xml  activity_main.xml
app/src/main/res/raw/: Database.txt  Staging.txt
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/metagenomix/android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
